--- a/livres.html
+++ b/livres.html
@@ -38,31 +38,34 @@
 
     <!--Livre 2-->
     <figure>
-      <a href="https://www.amazon.fr/Automoribund%C3%ADa-Ram%C3%B3n-G%C3%B3mez-Serna/dp/2710381974/ref=sr_1_1?keywords=automoribundia&qid=1641825803&sprefix=automoribun%2Caps%2C61&sr=8-1" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/913+XEsqMsL.jpg" alt="Automoribundía" class="books" /></a>
+      <a href="https://www.amazon.fr/Flic-Michel-NEYRET/dp/2259221440/ref=sr_1_1?keywords=michel+neyret&qid=1654178526&sprefix=michel+ne%2Caps%2C72&sr=8-1" target="_blank"> <img
+          src="https://images-na.ssl-images-amazon.com/images/I/61g3NfQjn1L.jpg" alt="Flic" class="books" /></a>
       <figcaption>
-        Ramón Gómez de la Serna
+        Michel Neyret
       </figcaption>
       <figcaption>
-        Automoribundía
+        Flic
       </figcaption>
       <figcaption>
-        34,00€
+        17,90€
       </figcaption>
     </figure>
 
     <!--Livre 3-->
     <figure>
-      <a href="https://www.amazon.fr/Alegr%C3%ADa-Manuel-Vilas/dp/2364684706/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1641825760&sr=8-2" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61vXLk-zz3L.jpg" alt="Alegría"
+      <a href="https://www.amazon.fr/mort-Marco-Pantani-Philippe-Brunel/dp/2246675219/ref=sr_1_1?keywords=vie+et+mort+de+marco+pantani&qid=1653932624&sprefix=vie+et+mort+de+marco%2Caps%2C82&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/51Yzl7iEk+S.jpg" alt="Vie et mort de Marco Pantani"
           class="books" /></a>
       <figcaption>
-        Manuel Vilas
+        Philippe Brunel
       </figcaption>
       <figcaption>
-        Alegría
+        Vie et mort de
       </figcaption>
       <figcaption>
-        22,50€
+        Marco Pantani
+      </figcaption>
+      <figcaption>
+        19,90€
       </figcaption>
     </figure>
 
@@ -192,19 +195,19 @@
 
     <!--Livre 12-->
     <figure>
-      <a href="https://www.amazon.fr/Gr%C3%AAl%C3%A9-tueur-%C3%A9tait-flic/dp/2021507149/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=3NZ0PYT5MW1T9&keywords=Patricia+Tourancheau+-+Le+Gr%C3%AAl%C3%A9&qid=1648821802&sprefix=patricia+tourancheau+-+le+gr%C3%AAl%C3%A9%2Caps%2C52&sr=8-1"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81mavTZb9lL.jpg" alt="Grêlé" class="books" /></a>
+      <a href="https://www.amazon.fr/Laura-Antonelli-nexiste-plus-roman/dp/2246811988/ref=sr_1_1?keywords=laura+antonelli+n+existe+plus&qid=1653932613&sprefix=laura+anton%2Caps%2C73&sr=8-1"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71StwlWdOlL.jpg" alt="Laura Antonelli n'existe plus" class="books" /></a>
       <figcaption>
-        Patricia Tourancheau
+        Philippe Brunel
       </figcaption>
       <figcaption>
-        Le Grêlé : Le tueur
+        Laura Antonelli
       </figcaption>
       <figcaption>
-        était un flic
+        n'existe plus
       </figcaption>
       <figcaption>
-        19,00€
+        18,00€
       </figcaption>
     </figure>
   </div>
@@ -1659,16 +1662,16 @@
 
     <!--Livre 98-->
     <figure>
-      <a href="https://www.amazon.fr/LAST-EXIT-BROOKLYN-nouvelle-traduction/dp/2226254307/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1650056905&sr=8-1"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71N7t2DPXgL.jpg" alt="Last exit to Brooklyn" class="books" /></a>
+      <a href="https://www.amazon.fr/Trente-mille-jours-Maurice-Genevoix/dp/B07RX2JXK6/ref=sr_1_1?crid=273MM0LTZNV0N&keywords=maurice+genevoix+-+trente+mille+jours&qid=1653932582&sprefix=maurice+genevoix+tre%2Caps%2C59&sr=8-1"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71rHYa75r0L.jpg" alt="Trente mille jours" class="books" /></a>
       <figcaption>
-        Hubert Selby Jr.
+        Maurice Genevoix
       </figcaption>
       <figcaption>
-        Last exit to Brooklyn
+        Trente mille jours
       </figcaption>
       <figcaption>
-        24,50€
+        8,90€
       </figcaption>
     </figure>
 
