--- a/livres.html
+++ b/livres.html
@@ -3365,9 +3365,9 @@
     <!--Livre 98-->
     <figure>
       <a href="https://www.amazon.fr/M%C3%A9moires-posthumes-Cubas-J-m-Machado/dp/B09246794C/ref=sr_1_1?keywords=machado+de+assis&qid=1652901580&sprefix=machado+de%2Caps%2C68&sr=8-1"
-        target="_blank"> <img src="Mémoires posthumes de Bras Cubas" alt="... Mais la vie continue" class="books" /></a>
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/51sKbpWzXdL.jpg" alt="Mémoires posthumes de Bras Cubas" class="books" /></a>
       <figcaption>
-        Bernard Pivot
+        J.-M Machado de Assis
       </figcaption>
       <figcaption>
         Mémoires posthumes
