--- a/livres.html
+++ b/livres.html
@@ -3621,7 +3621,10 @@
         Michelle Padovani
       </figcaption>
       <figcaption>
-        Cosa Nostra : L'entretien historique
+        Cosa Nostra :
+      </figcaption>
+      <figcaption>
+        L'entretien historique
       </figcaption>
       <figcaption>
         Indisponible
