--- a/autres.html
+++ b/autres.html
@@ -21,7 +21,7 @@
   </navbar>
 
   <div class="othersLine">
-    <!--Autres 1-->
+    <!--Autres 1
     <figure>
       <a href="https://www.amazon.fr/Esprits-criminels-Saison-Matthew-Gray-Gubler/dp/B07W6CDN5Y/ref=sr_1_2?keywords=esprits+criminels+saison+15&qid=1641825568&sprefix=esprits+cr%2Caps%2C80&sr=8-2" target="_blank"> <img
           src="https://m.media-amazon.com/images/I/61j-p9BlUbS._AC_SL1000_.jpg" alt="Esprits Criminels 14" class="others" /></a>
@@ -34,9 +34,9 @@
       <figcaption>
         14,77€
       </figcaption>
-    </figure>
+    </figure>-->
 
-    <!--Autres 2-->
+    <!--Autres 2
     <figure>
       <a href="https://www.amazon.fr/Esprits-Criminels-Saison-15-DVD/dp/B08JDTNP9V/ref=sr_1_1?keywords=esprits+criminels+saison+15&qid=1641825568&sprefix=esprits+cr%2Caps%2C80&sr=8-1" target="_blank"> <img
           src="https://m.media-amazon.com/images/I/91i3HLDQkZL._AC_SL1500_.jpg" alt="Esprits Criminels 15" class="others" /></a>
@@ -49,7 +49,7 @@
       <figcaption>
         19,99€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Autres 3-->
     <figure>
@@ -66,7 +66,7 @@
       </figcaption>
     </figure>
 
-    <!--Autres 4-->
+    <!--Autres 4
     <figure>
       <a href="https://www.amazon.fr/PlayStation-officielle-DualSense-rechargeable-Compatible/dp/B08H99BPJN/ref=pd_vtp_2/257-9479405-0879257?pd_rd_w=x9oiX&pf_rd_p=ae9723b3-1b9c-43b5-84ad-70af60d95378&pf_rd_r=0MKVP2P2297EBGMKPQ1B&pd_rd_r=de36e16f-0c13-4c40-9650-912e6f5c7ad9&pd_rd_wg=LpinP&pd_rd_i=B08H99BPJN&psc=1"
         target="_blank"> <img src="https://m.media-amazon.com/images/I/71lPDuOqgKL._AC_SL1500_.jpg" alt="Manette" class="others" /></a>
@@ -76,7 +76,7 @@
       <figcaption>
         69,13€
       </figcaption>
-    </figure>
+    </figure>-->
   </div>
 
   <div class="othersLine">
