--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     Mise à jour liste le 03 juin 2022
   </p>
   <p class="dateMAJ2">
-    Mise à jour prix le 22 avril 2022
+    Mise à jour prix le 03 juin 2022
   </p>
 
 </body>
