--- a/livres.html
+++ b/livres.html
@@ -127,7 +127,7 @@
         Un Singulier Garçon
       </figcaption>
       <figcaption>
-        24,00€
+        25,73€
       </figcaption>
     </figure>
 
@@ -215,7 +215,7 @@
   <div class="booksLine">
     <!--Livre 13-->
     <figure>
-      <a href="https://www.amazon.fr/difensore-perfetto-Giorgio-Chiellini/dp/8820068753/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=&sr=" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71QhPK3wfEL.jpg" alt="Io, Giorgio"
+      <a href="https://www.amazon.fr/Io-Giorgio-Chiellini-dp-8820072637/dp/8820072637/ref=dp_ob_title_bk" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71pbTiRFBDL.jpg" alt="Io, Giorgio"
           class="books" /></a>
       <figcaption>
         Giorgio Chiellini
@@ -224,7 +224,7 @@
         Io, Giorgio
       </figcaption>
       <figcaption>
-        7,16€
+        18,90€
       </figcaption>
     </figure>
 
@@ -331,7 +331,7 @@
         Sa mère
       </figcaption>
       <figcaption>
-        15,78€
+        15,42€
       </figcaption>
     </figure>
   </div>
@@ -744,7 +744,7 @@
         Louvre
       </figcaption>
       <figcaption>
-        11,09€
+        10,67€
       </figcaption>
     </figure>
 
@@ -760,7 +760,7 @@
         Un Cri Du Ventre
       </figcaption>
       <figcaption>
-        7,50€
+        8,00€
       </figcaption>
     </figure>
 
@@ -822,7 +822,7 @@
         La mano negra
       </figcaption>
       <figcaption>
-        16,00€
+        7,60€
       </figcaption>
     </figure>
 
@@ -871,7 +871,7 @@
         Commissaire Broussard
       </figcaption>
       <figcaption>
-        12,50€
+        6,90€
       </figcaption>
     </figure>
 
@@ -936,7 +936,7 @@
         Il tempo di un lento
       </figcaption>
       <figcaption>
-        11,00€
+        17,00€
       </figcaption>
     </figure>
 
@@ -1288,7 +1288,7 @@
         How a Person Became a User
       </figcaption>
       <figcaption>
-        20,36€
+        18,97€
       </figcaption>
     </figure>
 
@@ -1531,7 +1531,7 @@
         L'Amour aux temps du choléra
       </figcaption>
       <figcaption>
-        8,20€
+        8,40€
       </figcaption>
     </figure>
 
@@ -1980,7 +1980,7 @@
         d'un Condamné
       </figcaption>
       <figcaption>
-        2,00€
+        Rupture de stock
       </figcaption>
     </figure>
 
@@ -2137,7 +2137,7 @@
         Tome 2 de 2
       </figcaption>
       <figcaption>
-        11,00€
+        11,60€
       </figcaption>
     </figure>
 
@@ -2589,7 +2589,7 @@
 
     <!--Livre 98-->
     <figure>
-      <a href="https://www.amazon.fr/Poutine-litin%C3%A9raire-secret-Vladimir-F%C3%A9dorovski/dp/2253194441/ref=sr_1_6?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=30COX288OOODO&keywords=poutine&qid=1650420430&sprefix=poutine%2Caps%2C67&sr=8-6"
+      <a href="https://www.amazon.fr/Poutine-litineraire-secret-Vladimir-Fedorovski/dp/2268076199/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1650420430&sr=8-6"
         target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71wFPLu8HrL.jpg" alt="Poutine, l'itinéraire secret" class="books" /></a>
       <figcaption>
         Vladimir Fédorovski
@@ -2917,7 +2917,7 @@
       <a href="https://www.amazon.fr/Proc%C3%A8s-Franz-Kafka/dp/2253150150/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=3IQIXH9Y85Z5V&keywords=le+proces+kafka+poche&qid=1650654078&sprefix=le+proces+kafka+poche%2Caps%2C64&sr=8-1"
         target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71VM68lU6IL.jpg" alt="Le Procès" class="books" /></a>
       <figcaption>
-
+        Kafka
       </figcaption>
       <figcaption>
         Le Procès
@@ -3106,7 +3106,7 @@
         Ma part d'ombre
       </figcaption>
       <figcaption>
-        10,65€
+        Rupture de stock
       </figcaption>
     </figure>
 
@@ -3154,7 +3154,7 @@
         Le Marteau sans maître
       </figcaption>
       <figcaption>
-        Rupture de stock
+        9,70€
       </figcaption>
     </figure>
   </div>
@@ -4425,7 +4425,7 @@
 
     <!--Livre 100-->
     <figure>
-      <a href="https://www.amazon.fr/Bandini-John-Fante/dp/2264033002/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=2WQNS507DR812&keywords=John+Fante+-+Bandini&qid=1654193139&sprefix=john+fante+-+bandini+%2Caps%2C251&sr=8-1"
+      <a href="https://www.amazon.fr/R%C3%AAves-Bunker-Hill-John-Fante/dp/2264033010/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=16JBAZ4XM2TR8&keywords=R%C3%AAves+de+Bunker+Hill&qid=1654261956&sprefix=r%C3%AAves+de+bunker+hill%2Caps%2C89&sr=8-1"
         target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/710y2F1mKlL.jpg" alt="Rêves de Bunker Hill" class="books" /></a>
       <figcaption>
         John Fante
