--- a/livres.html
+++ b/livres.html
@@ -1582,16 +1582,16 @@
   <div class="booksLine">
     <!--Livre 93-->
     <figure>
-      <a href="https://www.amazon.fr/Lo-sciamano-Salvatore-Esposito/dp/8820071401/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1623591583&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71qc0NtRwjS.jpg"
+      <a href="https://www.amazon.fr/Chaman-Salvatore-Esposito/dp/2902324189/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=2PV7DDS4D52E3&keywords=le+chaman&qid=1654303844&sprefix=le+chaman%2Caps%2C73&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/610IYIb3TpL.jpg"
           alt="Lo sciamano" class="books" /></a>
       <figcaption>
         Salvatore Esposito
       </figcaption>
       <figcaption>
-        Lo sciamano
+        Le Chaman
       </figcaption>
       <figcaption>
-        18,90€
+        19,95€
       </figcaption>
     </figure>
 
@@ -5010,50 +5010,50 @@
   </div>
 
   <div class="booksLine">
-    <!--Livre 97
+    <!--Livre 97-->
     <figure>
-      <a href="https://www.amazon.fr/Derri%C3%A8re-porte-verte-Bernard-LIONS/dp/226317463X/ref=msx_wsirn_v1_3?pd_rd_w=KBmBG&pf_rd_p=0a0d9834-bf34-40cf-870c-8760e04a32b7&pf_rd_r=TJ8W0C94D8VJAWGRRDJG&pd_rd_r=2ed4b53a-8dcb-44b2-ae20-3379c41da5fa&pd_rd_wg=1AeVK&pd_rd_i=226317463X&psc=1"
-        target="_blank"> <img src="https://www.amazon.fr/images/I/41by02c4o7L.jpg" alt="Derrière la porte verte" class="books" /></a>
+      <a href="https://www.amazon.fr/fonction-balai-David-Foster-Wallace/dp/2290094838/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1654302543&sr=8-3"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/51vi01dUGtL.jpg" alt="La fonction du balai" class="books" /></a>
       <figcaption>
-        Bernard Lions
+        David Foster Wallace
       </figcaption>
       <figcaption>
-        Derrière la porte verte
+        La fonction du balai
       </figcaption>
       <figcaption>
-        17,90€
+        9,90€
       </figcaption>
-    </figure>-->
+    </figure>
 
-    <!--Livre 98
+    <!--Livre 98-->
     <figure>
-      <a href="https://www.amazon.fr/vie-continue-Bernard-Pivot/dp/2226451323/ref=msx_wsirn_v1_2?pd_rd_w=KBmBG&pf_rd_p=0a0d9834-bf34-40cf-870c-8760e04a32b7&pf_rd_r=TJ8W0C94D8VJAWGRRDJG&pd_rd_r=2ed4b53a-8dcb-44b2-ae20-3379c41da5fa&pd_rd_wg=1AeVK&pd_rd_i=2226451323&psc=1"
-        target="_blank"> <img src="https://www.amazon.fr/images/I/71RcLpRTVaL.jpg" alt="... Mais la vie continue" class="books" /></a>
+      <a href="https://www.amazon.fr/Voyage-au-phare-Virginia-Woolf/dp/2253031534/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=PO5EWD7EJ8PC&keywords=la+promenade+au+phare&qid=1654531466&sprefix=la+promenade+au+phare%2Caps%2C67&sr=8-1"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/910BttwhKVL.jpg" alt="Voyage au phare " class="books" /></a>
       <figcaption>
-        Bernard Pivot
+        Virginia Woolf
       </figcaption>
       <figcaption>
-        ... Mais la vie continue
+        Voyage au phare
       </figcaption>
       <figcaption>
-        19,90€
+        6,20€
       </figcaption>
-    </figure>-->
+    </figure>
 
-    <!--Livre 99
+    <!--Livre 99-->
     <figure>
-      <a href="https://www.amazon.fr/Messy-Kitchen-Deliciously-Fabulously-Copiously/dp/1682619389/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=renee+paquette&qid=1623591705&sr=8-1" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/81d-hgRC2eL.jpg" alt="Renee Paquette cuisine" class="books" /></a>
+      <a href="https://www.amazon.fr/Miracle-dans-Andes-montagnes-rentrer/dp/2253123609/ref=sr_1_1?keywords=nando+parrado&qid=1654531429&sprefix=nando+%2Caps%2C72&sr=8-1" target="_blank"> <img
+          src="https://images-na.ssl-images-amazon.com/images/I/71GqFB3ZdBL.jpg" alt="Miracle dans les Andes" class="books" /></a>
       <figcaption>
-        Renee Paquette
+        Nando Parrado
       </figcaption>
       <figcaption>
-        Messy In The Kitchen
+        Miracle dans les Andes
       </figcaption>
       <figcaption>
-        23,56€
+        7,90€
       </figcaption>
-    </figure>-->
+    </figure>
 
     <!--Livre 100
     <figure>
