--- a/autres.html
+++ b/autres.html
@@ -80,35 +80,29 @@
   </div>
 
   <div class="othersLine">
-    <!--Autres 5
+    <!--Autres 5-->
     <figure>
-      <a href="https://www.amazon.fr/Logitech-G240-Tapis-Souris-Noir/dp/B01DIJIDKI/ref=sr_1_5?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=1MLF728ZWY84T&keywords=tapis%2Bde%2Bsouris%2Blogitech&qid=1636725786&sprefix=tapis%2Bde%2Bsouris%2Blogi%2Caps%2C169&sr=8-5&th=1"
-        target="_blank"> <img src="https://m.media-amazon.com/images/I/51ODqiGzr7L._AC_SL1500_.jpg" alt="Tapis de souris" class="others" /></a>
+      <a href="https://shop.gotaga.tv/accessoires/57-mug-gotaga.html"
+        target="_blank"> <img src="https://shop.gotaga.tv/751-large_default/mug-gotaga.jpg" alt="Mug Gotaga" class="others" /></a>
       <figcaption>
-        Tapis de souris
+        Mug Gotaga
       </figcaption>
       <figcaption>
-        Logitech
+        20,00€
       </figcaption>
-      <figcaption>
-        15,99€
-      </figcaption>
-    </figure>-->
+    </figure>
 
-    <!--Autres 6
+    <!--Autres 6-->
     <figure>
-      <a href="https://www.amazon.fr/Friends-lInt%C3%A9grale-Saisons-Coffret-Blu-Ray/dp/B008HQCPCU/ref=cm_cr_arp_d_product_top?ie=UTF8" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/919CzxAoKRL._SL1500_.jpg"
-          alt="Friends - L'intégrale" class="others" /></a>
+      <a href="https://shop.gotaga.tv/accessoires/60-tumbler-list.html" target="_blank"> <img src="https://shop.gotaga.tv/763-large_default/tumbler-list.jpg"
+          alt="Tumbler Gotaga" class="others" /></a>
       <figcaption>
-        Friends
+        Tumbler Gotaga
       </figcaption>
       <figcaption>
-        L'intégrale en Blu-Ray
+        20,00€
       </figcaption>
-      <figcaption>
-        72,55€
-      </figcaption>
-    </figure>-->
+    </figure>
 
     <!--Autres 7
     <figure>
