--- a/livres.html
+++ b/livres.html
@@ -5075,173 +5075,177 @@
   </div>
 
   <div class="booksLine">
-    <!--Livre 97
+    <!--Livre 97-->
     <figure>
-      <a href="https://www.amazon.fr/Derri%C3%A8re-porte-verte-Bernard-LIONS/dp/226317463X/ref=msx_wsirn_v1_3?pd_rd_w=KBmBG&pf_rd_p=0a0d9834-bf34-40cf-870c-8760e04a32b7&pf_rd_r=TJ8W0C94D8VJAWGRRDJG&pd_rd_r=2ed4b53a-8dcb-44b2-ae20-3379c41da5fa&pd_rd_wg=1AeVK&pd_rd_i=226317463X&psc=1"
-        target="_blank"> <img src="https://www.amazon.fr/images/I/41by02c4o7L.jpg" alt="Derrière la porte verte" class="books" /></a>
+      <a href="https://www.amazon.fr/Etincelles-lenclume-Gabriele-DAnnunzio/dp/2919205323/ref=sr_1_8?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=7HATWCXHW4QR&keywords=gabriele+d%27annunzio+l%27enfant&qid=1656501050&sprefix=gabriele+d%27annunzio+l%27enfant%2Caps%2C51&sr=8-8"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71hzEosTqRL.jpg" alt="Les Etincelles de l'enclume" class="books" /></a>
       <figcaption>
-        Bernard Lions
+        Gabriele D'Annunzio
       </figcaption>
       <figcaption>
-        Derrière la porte verte
+        Les Etincelles de l'enclume
+      </figcaption>
+      <figcaption>
+        16,00€
+      </figcaption>
+    </figure>
+
+    <!--Livre 98-->
+    <figure>
+      <a href="https://www.amazon.fr/Xavier-Dupont-Ligonn%C3%A8s-grande-enqu%C3%AAte/dp/2501158601/ref=msx_wsirn_v1_sccl_1_1/257-9479405-0879257?pd_rd_w=hSALJ&content-id=amzn1.sym.17c4bd6e-a19d-4594-b7eb-49adc7297939&pf_rd_p=17c4bd6e-a19d-4594-b7eb-49adc7297939&pf_rd_r=6FF0WRGYQFRFQ2ZHFXJH&pd_rd_wg=ebRek&pd_rd_r=5773470b-d92a-40f0-b915-4467e0417b37&pd_rd_i=2501158601&psc=1"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/810yp2et6WL.jpg" alt="Xavier Dupont de Ligonnès - La grande enquête" class="books" /></a>
+      <figcaption>
+        Pierre Boisson
+      </figcaption>
+      <figcaption>
+        La grande enquête
+      </figcaption>
+      <figcaption>
+        15,90€
+      </figcaption>
+    </figure>
+
+    <!--Livre 99-->
+    <figure>
+      <a href="https://www.amazon.fr/Grondement-montagne-Yasunari-Kawabata/dp/2253938920/ref=sr_1_1?keywords=le+grondement+de+la+montagne+kawabata&qid=1656613871&sprefix=le+grondement+d%2Caps%2C67&sr=8-1" target="_blank"> <img
+          src="https://images-na.ssl-images-amazon.com/images/I/81pzI8MUl8L.jpg" alt="Le Grondement de la montagne" class="books" /></a>
+      <figcaption>
+        Yasunari Kawabata
+      </figcaption>
+      <figcaption>
+        Le Grondement de la montagne
+      </figcaption>
+      <figcaption>
+        8,20€
+      </figcaption>
+    </figure>
+
+    <!--Livre 100-->
+    <figure>
+      <a href="https://www.amazon.fr/Mort-%C3%A0-cr%C3%A9dit-Louis-Ferdinand-C%C3%A9line/dp/2070376923/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=2J35TCBO0C5BO&keywords=mort+%C3%A0+credit&qid=1656614339&s=books&sprefix=mort+%C3%A0+credit%2Cstripbooks%2C63&sr=1-1" target="_blank"> <img
+          src="https://images-na.ssl-images-amazon.com/images/I/81xAA8UO0kL.jpg" alt="Mort à crédit" class="books" /></a>
+      <figcaption>
+        Louis-Ferdinand Céline
+      </figcaption>
+      <figcaption>
+        Mort à crédit
+      </figcaption>
+      <figcaption>
+        10,90€
+      </figcaption>
+    </figure>
+  </div>
+
+  <div class="booksLine">
+    <!--Livre 97-->
+    <figure>
+      <a href="https://www.amazon.fr/Casse-pipe-Carnet-du-cuirassier-Destouches/dp/207021303X/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1656614488&sr=1-14"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71Hsz2Kh8QL.jpg" alt="Casse-pipe" class="books" /></a>
+      <figcaption>
+        Louis-Ferdinand Céline
+      </figcaption>
+      <figcaption>
+        Casse-pipe
       </figcaption>
       <figcaption>
         17,90€
       </figcaption>
-    </figure>-->
+    </figure>
 
-    <!--Livre 98
+    <!--Livre 98-->
     <figure>
-      <a href="https://www.amazon.fr/vie-continue-Bernard-Pivot/dp/2226451323/ref=msx_wsirn_v1_2?pd_rd_w=KBmBG&pf_rd_p=0a0d9834-bf34-40cf-870c-8760e04a32b7&pf_rd_r=TJ8W0C94D8VJAWGRRDJG&pd_rd_r=2ed4b53a-8dcb-44b2-ae20-3379c41da5fa&pd_rd_wg=1AeVK&pd_rd_i=2226451323&psc=1"
-        target="_blank"> <img src="https://www.amazon.fr/images/I/71RcLpRTVaL.jpg" alt="... Mais la vie continue" class="books" /></a>
+      <a href="https://www.amazon.fr/Salutations-r%C3%A9volutionnaires-Sophie-Bonnet/dp/2246815185/ref=sr_1_1?keywords=salutations+revolutionnaires&qid=1656613937&sprefix=salutations+revo%2Caps%2C61&sr=8-1"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71xtK0Pgy+L.jpg" alt="Salutations révolutionnaires" class="books" /></a>
       <figcaption>
-        Bernard Pivot
+        Sophie Bonnet
       </figcaption>
       <figcaption>
-        ... Mais la vie continue
+        Salutations révolutionnaires
       </figcaption>
       <figcaption>
-        19,90€
+        19,00€
       </figcaption>
-    </figure>-->
+    </figure>
 
-    <!--Livre 99
+    <!--Livre 99-->
     <figure>
-      <a href="https://www.amazon.fr/Messy-Kitchen-Deliciously-Fabulously-Copiously/dp/1682619389/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=renee+paquette&qid=1623591705&sr=8-1" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/81d-hgRC2eL.jpg" alt="Renee Paquette cuisine" class="books" /></a>
+      <a href="https://www.amazon.fr/assassin-au-dessus-tout-soupcon/dp/2290105090/ref=sr_1_1?keywords=un+assassin+au+dessus+de+tout+soup%C3%A7on&qid=1656613959&sprefix=un+assasin+au+%2Caps%2C61&sr=8-1" target="_blank"> <img
+          src="https://images-na.ssl-images-amazon.com/images/I/61rXBPMPIdL.jpg" alt="Un assassin au-dessus de tout soupcon" class="books" /></a>
       <figcaption>
-        Renee Paquette
+        Yvan Stefanovitch
       </figcaption>
       <figcaption>
-        Messy In The Kitchen
+        Un assassin au-dessus
       </figcaption>
       <figcaption>
-        23,56€
+        de tout soupçon
       </figcaption>
-    </figure>-->
+      <figcaption>
+        Rupture de stock
+      </figcaption>
+    </figure>
 
-    <!--Livre 100
+    <!--Livre 100-->
     <figure>
-      <a href="https://www.amazon.fr/grand-livre-boxe-Jean-Philippe-Lustyk/dp/2501147480/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=jean+philippe+lustyk&qid=1628339153&sr=8-1" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/71RMGDC-AXL.jpg" alt="Le grand livre de la boxe" class="books" /></a>
+      <a href="https://www.amazon.fr/VIE-DEUX-DOROTHY-PARKER/dp/226405445X/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=14HWJRFMIKECW&keywords=dorothy+parker&qid=1656613992&sprefix=dorothy+parker%2Caps%2C64&sr=8-1" target="_blank"> <img
+          src="https://images-na.ssl-images-amazon.com/images/I/41+xXNwkg8L.jpg" alt="La vie à deux Poche" class="books" /></a>
       <figcaption>
-        Jean-Phillipe Lustyk
+        Dorothy Parker
       </figcaption>
       <figcaption>
-        Le grand livre de la boxe
+        La vie à deux Poche
       </figcaption>
       <figcaption>
-        35,00€
+        8,20€
       </figcaption>
     </figure>-->
   </div>
 
   <div class="booksLine">
-    <!--Livre 97
+    <!--Livre 97-->
     <figure>
-      <a href="https://www.amazon.fr/Derri%C3%A8re-porte-verte-Bernard-LIONS/dp/226317463X/ref=msx_wsirn_v1_3?pd_rd_w=KBmBG&pf_rd_p=0a0d9834-bf34-40cf-870c-8760e04a32b7&pf_rd_r=TJ8W0C94D8VJAWGRRDJG&pd_rd_r=2ed4b53a-8dcb-44b2-ae20-3379c41da5fa&pd_rd_wg=1AeVK&pd_rd_i=226317463X&psc=1"
-        target="_blank"> <img src="https://www.amazon.fr/images/I/41by02c4o7L.jpg" alt="Derrière la porte verte" class="books" /></a>
+      <a href="https://www.amazon.fr/Hymnes-%C3%A0-haine-Dorothy-Parker/dp/2752904843/ref=sr_1_4?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=14HWJRFMIKECW&keywords=dorothy+parker&qid=1656613992&sprefix=dorothy+parker%2Caps%2C64&sr=8-4"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/51EG6vYSZsL.jpg" alt="Hymnes à la haine" class="books" /></a>
       <figcaption>
-        Bernard Lions
+        Dorothy Parker
       </figcaption>
       <figcaption>
-        Derrière la porte verte
+        Hymnes à la haine
       </figcaption>
       <figcaption>
-        17,90€
+        6,70€
       </figcaption>
-    </figure>-->
+    </figure>
 
-    <!--Livre 98
+    <!--Livre 98-->
     <figure>
-      <a href="https://www.amazon.fr/vie-continue-Bernard-Pivot/dp/2226451323/ref=msx_wsirn_v1_2?pd_rd_w=KBmBG&pf_rd_p=0a0d9834-bf34-40cf-870c-8760e04a32b7&pf_rd_r=TJ8W0C94D8VJAWGRRDJG&pd_rd_r=2ed4b53a-8dcb-44b2-ae20-3379c41da5fa&pd_rd_wg=1AeVK&pd_rd_i=2226451323&psc=1"
-        target="_blank"> <img src="https://www.amazon.fr/images/I/71RcLpRTVaL.jpg" alt="... Mais la vie continue" class="books" /></a>
+      <a href="https://www.amazon.fr/Mauvaise-journ%C3%A9e-demain-Dorothy-Parker/dp/2267020912/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1656614028&sr=8-1"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/41CUVSTVJGL.jpg" alt="Mauvaise journée demain" class="books" /></a>
       <figcaption>
-        Bernard Pivot
+        Dorothy Parker
       </figcaption>
       <figcaption>
-        ... Mais la vie continue
+        Mauvaise journée demain
       </figcaption>
       <figcaption>
-        19,90€
+        7,10€
       </figcaption>
-    </figure>-->
+    </figure>
 
-    <!--Livre 99
+    <!--Livre 99-->
     <figure>
-      <a href="https://www.amazon.fr/Messy-Kitchen-Deliciously-Fabulously-Copiously/dp/1682619389/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=renee+paquette&qid=1623591705&sr=8-1" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/81d-hgRC2eL.jpg" alt="Renee Paquette cuisine" class="books" /></a>
+      <a href="https://www.amazon.fr/Comme-une-valse-Dorothy-PARKER/dp/2264017104/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=MO3CWG3CXEVZ&keywords=dorothy+parker+comme+une+valse&qid=1656614078&sprefix=dorothy+parker+comme+une+valse%2Caps%2C53&sr=8-1" target="_blank"> <img
+          src="https://images-na.ssl-images-amazon.com/images/I/61tP1Dq6TnL.jpg" alt="Comme une valse" class="books" /></a>
       <figcaption>
-        Renee Paquette
+        Dorothy Parker
       </figcaption>
       <figcaption>
-        Messy In The Kitchen
+        Comme une valse
       </figcaption>
       <figcaption>
-        23,56€
+        7,10€
       </figcaption>
-    </figure>-->
-
-    <!--Livre 100
-    <figure>
-      <a href="https://www.amazon.fr/grand-livre-boxe-Jean-Philippe-Lustyk/dp/2501147480/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=jean+philippe+lustyk&qid=1628339153&sr=8-1" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/71RMGDC-AXL.jpg" alt="Le grand livre de la boxe" class="books" /></a>
-      <figcaption>
-        Jean-Phillipe Lustyk
-      </figcaption>
-      <figcaption>
-        Le grand livre de la boxe
-      </figcaption>
-      <figcaption>
-        35,00€
-      </figcaption>
-    </figure>-->
-  </div>
-  <div class="booksLine">
-    <!--Livre 97
-    <figure>
-      <a href="https://www.amazon.fr/Derri%C3%A8re-porte-verte-Bernard-LIONS/dp/226317463X/ref=msx_wsirn_v1_3?pd_rd_w=KBmBG&pf_rd_p=0a0d9834-bf34-40cf-870c-8760e04a32b7&pf_rd_r=TJ8W0C94D8VJAWGRRDJG&pd_rd_r=2ed4b53a-8dcb-44b2-ae20-3379c41da5fa&pd_rd_wg=1AeVK&pd_rd_i=226317463X&psc=1"
-        target="_blank"> <img src="https://www.amazon.fr/images/I/41by02c4o7L.jpg" alt="Derrière la porte verte" class="books" /></a>
-      <figcaption>
-        Bernard Lions
-      </figcaption>
-      <figcaption>
-        Derrière la porte verte
-      </figcaption>
-      <figcaption>
-        17,90€
-      </figcaption>
-    </figure>-->
-
-    <!--Livre 98
-    <figure>
-      <a href="https://www.amazon.fr/vie-continue-Bernard-Pivot/dp/2226451323/ref=msx_wsirn_v1_2?pd_rd_w=KBmBG&pf_rd_p=0a0d9834-bf34-40cf-870c-8760e04a32b7&pf_rd_r=TJ8W0C94D8VJAWGRRDJG&pd_rd_r=2ed4b53a-8dcb-44b2-ae20-3379c41da5fa&pd_rd_wg=1AeVK&pd_rd_i=2226451323&psc=1"
-        target="_blank"> <img src="https://www.amazon.fr/images/I/71RcLpRTVaL.jpg" alt="... Mais la vie continue" class="books" /></a>
-      <figcaption>
-        Bernard Pivot
-      </figcaption>
-      <figcaption>
-        ... Mais la vie continue
-      </figcaption>
-      <figcaption>
-        19,90€
-      </figcaption>
-    </figure>-->
-
-    <!--Livre 99
-    <figure>
-      <a href="https://www.amazon.fr/Messy-Kitchen-Deliciously-Fabulously-Copiously/dp/1682619389/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=renee+paquette&qid=1623591705&sr=8-1" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/81d-hgRC2eL.jpg" alt="Renee Paquette cuisine" class="books" /></a>
-      <figcaption>
-        Renee Paquette
-      </figcaption>
-      <figcaption>
-        Messy In The Kitchen
-      </figcaption>
-      <figcaption>
-        23,56€
-      </figcaption>
-    </figure>-->
+    </figure>
 
     <!--Livre 100
     <figure>
