--- a/jeuxvideo.html
+++ b/jeuxvideo.html
@@ -22,16 +22,22 @@
 
   <div class="gamesLine">
 
-    <!--Jeu 1
+    <!--Jeu 1-->
     <figure>
-      <a href="https://www.amazon.fr/Gran-Turismo-7-PlayStation-5/dp/B09H2P828W/ref=sr_1_1_sspa?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=183F63X1ZK8I3&keywords=gt7&qid=1648822103&sprefix=gt7%2Caps%2C87&sr=8-1-spons&spLa=ZW5jcnlwdGVkUXVhbGlmaWVyPUEzS0o3MEFYN05EWFdMJmVuY3J5cHRlZElkPUEwMjE5NjIzTVkzVlNETkNPQUdOJmVuY3J5cHRlZEFkSWQ9QTAwNTIwNzMyTTBWR0E4TkxTRUw5JndpZGdldE5hbWU9c3BfYXRmJmFjdGlvbj1jbGlja1JlZGlyZWN0JmRvTm90TG9nQ2xpY2s9dHJ1ZQ&th=1" target="_blank"> <img src="https://m.media-amazon.com/images/I/81a31luMs9L._AC_SL1500_.jpg" alt="Gran Turismo 7" class="game" /></a>
+      <a href="#" target="_blank"> <img src="https://www.motorsinside.com/images/photo/article/f12022/frontier-f1-manager-2022-annonce-teaser.jpg" alt="F1 Manager 2022" class="game" /></a>
       <figcaption>
-        Gran Turismo 7
+        F1 Manager 2022
       </figcaption>
       <figcaption>
-        61,49€€
+        50€
       </figcaption>
-    </figure>-->
+      <figcaption>
+        Sortie fin aout
+      </figcaption>
+      <figcaption>
+        A précommander sur PC
+      </figcaption>
+    </figure>
 
     <!--Jeu 2
     <figure>
