--- a/livres.html
+++ b/livres.html
@@ -1580,7 +1580,7 @@
   </div>
 
   <div class="booksLine">
-    <!--Livre 93-->
+    <!--Livre 93
     <figure>
       <a href="https://www.amazon.fr/Chaman-Salvatore-Esposito/dp/2902324189/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=2PV7DDS4D52E3&keywords=le+chaman&qid=1654303844&sprefix=le+chaman%2Caps%2C73&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/610IYIb3TpL.jpg"
           alt="Lo sciamano" class="books" /></a>
@@ -1593,7 +1593,7 @@
       <figcaption>
         19,95€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 94-->
     <figure>
