--- a/autres.html
+++ b/autres.html
@@ -129,8 +129,8 @@
       <figcaption>
         10,98€
       </figcaption>
-    </figure>
-  </div>-->
+    </figure>-->
+  </div>
 
     <div class="othersLine">
       <!--Autres 9
