--- a/jeuxvideo.html
+++ b/jeuxvideo.html
@@ -22,7 +22,7 @@
 
   <div class="gamesLine">
 
-    <!--Jeu 1-->
+    <!--Jeu 1
     <figure>
       <a href="#" target="_blank"> <img src="https://www.motorsinside.com/images/photo/article/f12022/frontier-f1-manager-2022-annonce-teaser.jpg" alt="F1 Manager 2022" class="game" /></a>
       <figcaption>
@@ -37,7 +37,7 @@
       <figcaption>
         A précommander sur PC
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Jeu 2
     <figure>
