--- a/livres.html
+++ b/livres.html
@@ -69,7 +69,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 4-->
+    <!--Livre 4
     <figure>
       <a href="https://www.amazon.fr/MARGE-DERREUR-REY-NICOLAS/dp/B08VCJ1LZ7/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1626616403&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/31MWx5CzjwS.jpg"
           alt="La marge d'ereur" class="books" /></a>
@@ -82,7 +82,7 @@
       <figcaption>
         18,00€
       </figcaption>
-    </figure>
+    </figure>-->
   </div>
 
   <div class="booksLine">
@@ -131,7 +131,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 8-->
+    <!--Livre 8
     <figure>
       <a href="https://www.amazon.fr/Lart-guerre-Traduit-comment%C3%A9-chinois/dp/2818504961?ref_=Oct_RAsinC_Ajax_301061_2&pf_rd_p=e5b0b4bf-eca8-52d1-8616-3e2c263b1a1e&pf_rd_s=merchandised-search-8&pf_rd_t=101&pf_rd_i=301061&pf_rd_m=A1X6FK5RDHNB96&pf_rd_r=79P8R1T9R8DG5CW5FW9X&pf_rd_r=79P8R1T9R8DG5CW5FW9X&pf_rd_p=e5b0b4bf-eca8-52d1-8616-3e2c263b1a1e"
         target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/418CdHQ%2BkLL.jpg" alt="L'art de la Guerre" class="books" /></a>
@@ -144,7 +144,7 @@
       <figcaption>
         6,80€
       </figcaption>
-    </figure>
+    </figure>-->
   </div>
 
   <div class="booksLine">
