--- a/livres.html
+++ b/livres.html
@@ -213,7 +213,7 @@
   </div>
 
   <div class="booksLine">
-    <!--Livre 13-->
+    <!--Livre 13
     <figure>
       <a href="https://www.amazon.fr/Io-Giorgio-Chiellini-dp-8820072637/dp/8820072637/ref=dp_ob_title_bk" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71pbTiRFBDL.jpg" alt="Io, Giorgio"
           class="books" /></a>
@@ -226,7 +226,7 @@
       <figcaption>
         18,90€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 14-->
     <figure>
@@ -275,7 +275,7 @@
   </div>
 
   <div class="booksLine">
-    <!--Livre 17-->
+    <!--Livre 17
     <figure>
       <a href="https://www.amazon.fr/Verdun-Yann-Moix/dp/2246823463/ref=sr_1_1?keywords=yann+moix+verdun&qid=1649593543&sprefix=yann+moi%2Caps%2C63&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/51roe24qM+L.jpg"
           alt="Verdun" class="books" /></a>
@@ -288,7 +288,7 @@
       <figcaption>
         19,50€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 18-->
     <figure>
@@ -630,7 +630,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 39-->
+    <!--Livre 39
     <figure>
       <a href="https://www.amazon.fr/Barbier-S%C3%A9ville-BEAUMARCHAIS/dp/2266289187/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=2R6F3GC6O89FA&keywords=Le+Barbier+de+S%C3%A9ville+poche&qid=1650641740&sprefix=le+barbier+de+s%C3%A9ville+poche%2Caps%2C56&sr=8-1"
         target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61PdJJXdZiL.jpg" alt="Le Barbier de Séville" class="books" /></a>
@@ -646,9 +646,9 @@
       <figcaption>
         1,90€
       </figcaption>
-    </figure>
+    </figure>-->
 
-    <!--Livre 40-->
+    <!--Livre 40
     <figure>
       <a href="https://www.amazon.fr/Mariage-Figaro-M%C3%A8re-coupable/dp/2070375277/ref=sr_1_4?crid=2YFDE5RFPG8I3&keywords=la+m%C3%A8re+coupable+beaumarchais&qid=1650641789&sprefix=La+M%C3%A8re+coupable+%2Caps%2C57&sr=8-4" target="_blank"> <img
           src="https://images-na.ssl-images-amazon.com/images/I/91VXdV12sPL.jpg" alt="Le Mariage de Figaro - La Mère coupable" class="books" /></a>
@@ -664,7 +664,7 @@
       <figcaption>
         11,00€
       </figcaption>
-    </figure>
+    </figure>-->
   </div>
 
   <div class="booksLine">
