--- a/autres.html
+++ b/autres.html
@@ -51,7 +51,7 @@
       </figcaption>
     </figure>-->
 
-    <!--Autres 3-->
+    <!--Autres 3
     <figure>
       <a href="https://www.amazon.fr/Chernobyl-Blu-Ray-Jared-Harris/dp/B07SZGSXT3?pf_rd_p=eab93c21-6a33-4780-aa56-35c8fe5fc951&pd_rd_wg=srzCG&pf_rd_r=JRY7AN681R6AYFAFNDXQ&ref_=pd_gw_cr_simh&pd_rd_w=xJ0th&pd_rd_r=298834d5-8235-4e45-8dcb-0eda62497f72"
         target="_blank"> <img src="https://www.amazon.fr/images/I/51NHFmY-YcS._AC_SL1000_.jpg" alt="Intégrale Chernobyl" class="others" /></a>
@@ -64,7 +64,7 @@
       <figcaption>
         22,50€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Autres 4
     <figure>
