--- a/livres.html
+++ b/livres.html
@@ -178,7 +178,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 11-->
+    <!--Livre 11
     <figure>
       <a href="https://www.amazon.fr/LEnigme-chambre-622-Jo%C3%ABl-Dicker/dp/2889730158/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1605407029&sr=1-93" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81sLRAyASzL.jpg"
           alt="L'Énigme de la Chambre 622" class="books" /></a>
@@ -191,7 +191,7 @@
       <figcaption>
         23,00€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 12-->
     <figure>
