--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </div>
 
   <p class="dateMAJ">
-    Mise à jour liste le 09 juin 2022
+    Mise à jour liste le 14 juillet 2022
   </p>
   <p class="dateMAJ2">
     Mise à jour prix le 03 juin 2022
