--- a/livres.html
+++ b/livres.html
@@ -402,7 +402,7 @@
   </div>
 
   <div class="booksLine">
-    <!--Livre 25-->
+    <!--Livre 25
     <figure>
       <a href="https://www.amazon.fr/Retour-%C3%A0-Birkenau-Ginette-Kolinka/dp/2246820707?ref_=Oct_NReleaseC_301061_6&pf_rd_r=4DW69VZ12YWBZ8SAMD7G&pf_rd_p=e5b0b4bf-eca8-52d1-8616-3e2c263b1a1e&pf_rd_s=merchandised-search-8&pf_rd_t=101&pf_rd_i=301061&pf_rd_m=A1X6FK5RDHNB96"
         target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71Jq5smX3LL.jpg" alt="Retour à Birkenau" class="books" /></a>
@@ -415,7 +415,7 @@
       <figcaption>
         13,00€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 26-->
     <figure>
@@ -615,7 +615,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 38-->
+    <!--Livre 38
     <figure>
       <a href="https://www.amazon.fr/LAmour-vie-Jack-London/dp/2070393739/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=&sr=" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/812eaqFjfmL.jpg" alt="L'Amour de la vie"
           class="books" /></a>
@@ -628,7 +628,7 @@
       <figcaption>
         7,60€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 39
     <figure>
