--- a/livres.html
+++ b/livres.html
@@ -600,7 +600,7 @@
   </div>
 
   <div class="booksLine">
-    <!--Livre 37-->
+    <!--Livre 37
     <figure>
       <a href="https://www.amazon.fr/Into-wild-Jon-KRAKAUER/dp/2264048301/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1559754680&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61tbitzGOyL.jpg" alt="Into the wild"
           class="books" /></a>
@@ -613,7 +613,7 @@
       <figcaption>
         7,60€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 38
     <figure>
@@ -4106,7 +4106,7 @@
         Le Pur et l'impur
       </figcaption>
       <figcaption>
-        7,<7></7>0€
+        7,70€
       </figcaption>
     </figure>
   </div>
@@ -4723,7 +4723,7 @@
         Ecoute la ville tomber
       </figcaption>
       <figcaption>
-        Rupture de stock
+        9,00€
       </figcaption>
     </figure>
 
